ajustes na paginação