@@ -10,7 +10,9 @@ import java.time.format.DateTimeFormatter;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+import com.devsuperior.dsmeta.dto.SaleSallerMinDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -38,22 +40,32 @@ public class SaleService {
 
 
 	}
-	public List<SaleMinDTO> searchByNameDatesString(String name, String datainicio, String datafim ,Pageable pageable) {
+	public List<SaleSallerMinDTO> searchByNameDatesString(String name, String datainicio, String datafim ,Pageable pageable) {
 
 		//tratamento das datas conforme requisitos do sistema
 		datafim =  datafim.trim().equals("")? LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault()).toString():datafim;
-
 		LocalDate ldt = LocalDate.parse(datafim);
-
 		datainicio =  datainicio.trim().equals("")?ldt.minusYears(1).toString():datainicio;
 
 
-
-
-
-		List<SaleMinDTO> result = repository.searchByNameDatesString(name,datainicio,datafim,pageable).stream().map(SaleMinDTO::new).toList();
+		List<SaleSallerMinDTO> result = repository.searchByNameDatesString(name,datainicio,datafim,pageable).stream().map(SaleSallerMinDTO::new).collect(Collectors.toList());
 
 		return result;
+
+
+	}
+	public List<SaleMinDTO> searchByNameDatesStringOld(String name, String datainicio, String datafim ,Pageable pageable) {
+
+		//tratamento das datas conforme requisitos do sistema
+		datafim =  datafim.trim().equals("")? LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault()).toString():datafim;
+		LocalDate ldt = LocalDate.parse(datafim);
+		datainicio =  datainicio.trim().equals("")?ldt.minusYears(1).toString():datainicio;
+
+
+		//List<SaleMinDTO> result = repository.searchByNameDatesString(name,datainicio,datafim,pageable).stream().map(SaleMinDTO::new).toList();
+
+		//return result;
+		return null;
 
 
 	}
